--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.13"
 llama-index = "^0.12.25"
 llama-index-agent-openai = "^0.4.6"
+langchain-tavily = "^0.1.5"
+langchain-community = "^0.3.20"
 
 
 [build-system]
